[package]
name = "ahitool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
clap = { version = "4.5.15", features = ["derive", "env"] }
csv = "1.3.0"
oauth2 = { version = "4.4.2", default-features = false, features = ["ureq"] }
url = "2.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
open = "5.3.0"
self-replace = "1.5.0"
tempfile = "3.14.0"
eframe = "0.32.2"
egui = "0.32.2"
ureq = { version = "2.12.1", features = ["json"] }
tiny_http = "0.12.0"
http = "1.2.0"
